# exodus

./: .gitmodules  CMakeLists.txt  exodus.desktop.in
config/: exodus.desktop.in  postinst.in  postrm.in  prerm.in
debian/: changelog  control  postinst.in  postrm.in  prerm
src/: CMakeLists.txt
